--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Title Goes Here</title>
+     <title>DOM Play</title>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
+  <style>
+   
+   /* 
+    #play span{
+        background-color:yellow;
+    }
+    */
+  </style>
  </head>
  <body>
      <header>
-     <h1>Title Goes Here</h1>
+     <h1>DOM Play</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="#" target="_blank">Name of project goes here</a>
+            <a href="#" target="_blank">DOM Play Project</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
-     
-   <main class="wrapper">
-    <p>Content goes here</p>
+   
+    <main class="wrapper">
+   
+   <h2 class="subheader">Moana Script</h2>
+   <div id="play">
+    <p><span data-actor="moana">Moana: What is this place?</span></p>
+    <p><span data-actor="grandma tala">Grandma Tala: Do you really think our ancestors stayed within the reef?</span></p>
+    <p><span data-actor="moana">Moana: What's in there?</span></p>
+    <p><span data-actor="grandma tala">Grandma Tala: The answer to the question you keep asking yourself. Who are you meant to be? Go inside, bang the drum, and find out.</span></p>
+    <p><span data-actor="moana">Moana: *bangs the drum*</span></p>
+
+    </div>
      <footer>
-      <p><small>&copy; 2021 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+      <p><small>&copy; 2022 by 
+          Liaina Mageo, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
     </footer>
   </main>
   <script src="js/main.js"></script>
+  <script src="js/dom-play.js"></script>
  </body>
 </html>
