changes made to file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
     <p><span data-actor="grandma tala">Grandma Tala: The answer to the question you keep asking yourself. Who are you meant to be? Go inside, bang the drum, and find out.</span></p>
     <p><span data-actor="moana">Moana: *bangs the drum*</span></p>
 
+    <br>
+    <h2>Webpage Description:</h2>
+    <p>This webpage is another demonstration of utilizing JavaScript and it's,
+        different functions, methods, elements, and more. The theme for this project
+        was taking scripts from plays or movies. I chose the Disney movie, "Moana"
+        and my 4 script lines of choice came from Moana and her Grandmother Tala.
+        I created a function called highlight, which allows each line to be highlighted.
+        As a class, we also created a container in order to wire the elements. We created
+        a div and id to store the elements.
+        Using CSS descendant selectors were also part of this process, as well as attributes
+        to specify which specific character/actor. This project was another great learning
+        experience. It's important to be extremely careful of your spelling, I had mispelled
+        the color yellow, which resulted in my webpage not functioning correctly.
+    </p>
     </div>
      <footer>
       <p><small>&copy; 2022 by 
